# description-writer

./: .dockerignore  .env.example  .gitignore  pyproject.toml
connectors/: __init__.py  base.py  selltico.py  tau_commerce.py  woocommerce.py
core/agreement/: __init__.py  engine.py  types.py
core/claims/: __init__.py  engine.py  types.py
core/transliteration/: __init__.py  engine.py  types.py
deploy/: Caddyfile  Dockerfile  backup.sh  docker-compose.yml  entrypoint.sh
doc/: CLAUDE.md  deploy-vercel.md  deploy.md  launch-checklist.md  masterplan.md  runbook.md  security-checklist.md  smoke.md
doc/landing/: Korpus.dc.html
landing/: index.html  korpus.css  korpus.js
landing/fonts/: fonts.css
lang/sr/: __init__.py  agreement.py  alphabet.py  counting.py  digraph_exceptions.py  protected_terms.py
pipeline/: __init__.py  cli.py  correctness.py  fsio.py  generation.py  ingest.py  provenance.py  review.py  runner.py  types.py
scripts/: check.ps1  check.sh
tests/connectors/: test_selltico.py  test_tau_commerce.py  test_woocommerce.py
tests/pipeline/: test_cli.py  test_correctness.py  test_fsio.py  test_generation.py  test_ingest.py  test_provenance.py  test_review.py  test_runner.py  test_types.py
web/: manage.py  requirements.txt
web/accounts/: admin.py  models.py  tests.py  views.py
web/batches/: admin.py  api_urls.py  bridge.py  dbstorage.py  demo.py  dispatch.py  forms.py  models.py  tasks.py  urls.py  views.py  views_tasks.py
web/common/: guide.py  org.py  views.py
web/config/: urls.py  wsgi.py
web/connections/: admin.py  crypto.py  (+2 more)
(+58 files in other folders)
