[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecommerce-description-generator"
version = "0.1.0"
description = "Serbian-language catalog correctness & compliance engine for product descriptions"
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
# Real LLM provider for pipeline.generation.AnthropicProvider. Lazily imported
# inside the provider so the package imports and the whole test suite run
# (via FakeProvider) without this installed.
llm = ["anthropic>=0.40"]

[tool.hatch.build.targets.wheel]
packages = ["core", "lang", "pipeline", "connectors"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
